Revised Section "Wikidata".

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -609,6 +609,27 @@ chapter = {N-Grams},
 title = {{N-Grams}},
 year = {2014}
 }
+% about completeness in rdf data (e.g. wikidata)
+@Inbook{Darari2016,
+author="Darari, Fariz
+and Razniewski, Simon
+and Prasojo, Radityo Eko
+and Nutt, Werner",
+editor="Bozzon, Alessandro
+and Cudre-Maroux, Philippe
+and Pautasso, Cesare",
+title="Enabling Fine-Grained RDF Data Completeness Assessment",
+bookTitle="Web Engineering: 16th International Conference, ICWE 2016, Lugano, Switzerland, June 6-9, 2016. Proceedings",
+year="2016",
+publisher="Springer International Publishing",
+address="Cham",
+pages="170--187",
+isbn="978-3-319-38791-8",
+doi="10.1007/978-3-319-38791-8_10",
+url="http://dx.doi.org/10.1007/978-3-319-38791-8_10"
+}
+
+
 % wikidata subclass of documentation
 @misc{WikidataP279,
 title={Property talk: P279},
